[GowriK] Refactor : console log is taken,removed the unwanted lines and changed the component name to camelcase

--- a/src/components/DashboardChart/dashboardChat.less
+++ b/src/components/DashboardChart/dashboardChat.less
@@ -1,504 +1,380 @@
-.rowchart{
-    margin-top: 64px;
-    display:flex;
-    flex-direction: row;
-    // align-items: center;
-    background-color: #94a2f0;
-    height: 150px;
-    padding: 20px;
-    justify-content: space-between;
-    // width: 100%;
-    flex-wrap: wrap;
+@import "../../less/color.less";
+@import "../../less/minix.less";
+.rowchart {
+  margin-top: 64px;
+  display: flex;
+  flex-direction: row;
+  background-color: #94a2f0;
+  height: 150px;
+  padding: 20px;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-.productSizechart{
-    height: 67px;
-    display: flex;
-    align-items: flex-start;
-    width: 100%;
+.productSizechart {
+  height: 67px;
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
 }
-.productColorchart{
-    // font-family:lato;
-    font-size: 23px;
-    color : rgb(255, 255, 255)
+.productColorchart {
+  font-size: 23px;
+  color: rgb(255, 255, 255);
 }
-.productWelcomechart{
-    // font-family: lato,monospace;
-    font-size: 14px;
-    color : white
-
+.productWelcomechart {
+  font-size: 14px;
+  color: white;
 }
-.productNamechart{
-    min-width: 770px;
-    max-width: 100%;
+.productNamechart {
+  min-width: 770px;
+  max-width: 100%;
 }
-.pathchart{
-    width: 300px;
-    border-radius: 50px;
-    background-color: #b8c0e2;
-    // margin-left: 150px;
+.pathchart {
+  width: 300px;
+  border-radius: 50px;
+  background-color: #b8c0e2;
 }
-.homeIcon1chart{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    // border: 1px solid #aab3e7;
-    border-radius: 30px;
-    padding: 5px;
-    // width: 350px;
-    height: 46px;
-    margin-left: 12px;
+.homeIcon1chart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  border-radius: 30px;
+  padding: 5px;
+  height: 46px;
+  margin-left: 12px;
 }
-.oreo1chart{
-    // font-family: "Montserrat",sans-serif;   
-    color : white;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+.oreo1chart {
+  color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
-.iconHomeColorchart{
-    color:white;
-    margin-right: 5px ;
+.iconHomeColorchart {
+  color: white;
+  margin-right: 5px;
 }
-.wordStylechart{
-    color: #888;
-    margin-left: 7px;
-    font-size: 17px;
-    // font-family: "Montserrat",sans-serif,monospace;   
-
-
+.wordStylechart {
+  color: @lightgrey;
+  margin-left: 7px;
+  font-size: 17px;
 }
-.wordStyle1chart{
-    margin-left: 5px;
-    font-size: 17px;
-    margin-left: 7px;
-    // font-family: "Montserrat",sans-serif,monospace;   
-
-
-    // color: #888;
+.wordStyle1chart {
+  margin-left: 5px;
+  font-size: 17px;
+  margin-left: 7px;
 }
-.containerFluidchart{
-    width: 82%;
-    display: flex;
-    flex-wrap:wrap ;
-    // padding: 15px;
-    z-index: 3;
-    top:11em;
-    position: absolute;
-    justify-content: center;
-    flex-direction: column;
-    margin-bottom: 20px;
-   
-    // background-color: orange;
+.containerFluidchart {
+  .containerFluidchart();
 }
-.rowFlexchart{
-    display: flex;
-    // flex-wrap: wrap;
-    margin-top: 20px;
-    width: 100%;
-    justify-content: center;
-    height: 600px;
-   
+.rowFlexchart {
+  display: flex;
+  margin-top: 20px;
+  width: 100%;
+  justify-content: center;
+  height: 600px;
 }
-.rowFlexchart11{
-    display: flex;
-    // flex-wrap: wrap;
-    margin-top: 20px;
-    width: 100%;
-    justify-content: center;
-    // height: 700px;
-    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    // box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
-
-   
+.rowFlexchart11 {
+  display: flex;
+  margin-top: 20px;
+  width: 100%;
+  justify-content: center;
 }
-.rowFlex1chart{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    // width: 100%;
-    // justify-content: center;
+.rowFlex1chart {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.rowFlex1chart22{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    background-color:white;
-    // padding: 20px;
-    margin-left: 20px;
-    height: 208px;
-    width: 339px;
-    opacity: 0.9;
-    border: 1px white solid;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-    // box-shadow: 0 4px 8px 0 rgb(238, 235, 235), 0 6px 20px 0 white;
-
-    // justify-content: center;
+.rowFlex1chart22 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  background-color: white;
+  margin-left: 20px;
+  height: 208px;
+  width: 339px;
+  opacity: 0.9;
+  border: 1px white solid;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.colchart{
-    // max-width: 25%;
-    // position: relative;
-    display : flex;
-    flex-direction: column;
-    // flex-wrap: wrap;
-    // width: 100%;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    // background-color: red;
-    
+.colchart {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-.productItemchart{
-    background-color: white;
-    // width: 249px;
-    box-shadow: none;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    padding:10px;
-    
+.productItemchart {
+  background-color: white;
+  box-shadow: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 10px;
 }
-.bodychart{
-    color: #424242;
-    font-weight: 400;
-    // padding: 20px;
-    font-size: 14px;
+.bodychart {
+  color: #424242;
+  font-weight: 400;
+  font-size: 14px;
 }
-.imgFolderchart{
-    // width : 239px;
-    // height: 239px;
-    padding : 5px;
-    display: flex;
-    z-index: 5;
-    position: relative;
-    justify-content: center;
+.imgFolderchart {
+  padding: 5px;
+  display: flex;
+  z-index: 5;
+  position: relative;
+  justify-content: center;
 }
-.imgFoldershowchart{
-    padding : 5px;
-    display: flex;
-    z-index: 5;
-    // top:1em;
-    // position: absolute;
-    justify-content: center;
-
+.imgFoldershowchart {
+  padding: 5px;
+  display: flex;
+  z-index: 5;
+  justify-content: center;
 }
-.imgSizechart{
-    width : 209px;
-    height: 209px;
+.imgSizechart {
+  width: 209px;
+  height: 209px;
 }
-.imgSizeshowchart{
-    width : 170px;
-    height: 170px;
-    transform: scale(1.3);
-
-    // z-index: 3;
-    // top:-1em;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    // transition: 1s;
-    
-
+.imgSizeshowchart {
+  width: 170px;
+  height: 170px;
+  transform: scale(1.3);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.productnamechart{
-    display: flex;
-    justify-content: center;
+.productnamechart {
+  display: flex;
+  justify-content: center;
 }
-.columnProductchart{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
+.columnProductchart {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.rowProductchart{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
+.rowProductchart {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-.firstcontainerchart{
-    display: flex;
-    width : 100%;
-    // background-color: yellow;
+.firstcontainerchart {
+  display: flex;
+  width: 100%;
 }
 
-.hoverbuttonchart{
-    // visibility: hidden;
-    // margin: 0 auto;
-    // overflow: hidden;
-    // display: none;
-    // visibility: hidden;
-    z-index: 3;
-    top:1.5em;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-bottom: 30px;
-    // background-color: yellowgreen;
-    // margin-top: 10px;
+.hoverbuttonchart {
+  z-index: 3;
+  top: 1.5em;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 30px;
 }
-.hoverbutton1chart{
-    // visibility: hidden;
-    // margin: 0 auto;
-    // overflow: hidden;
-    // display: none;
-    visibility: hidden;
-    z-index: 3;
-    top:1.5em;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    
-    // background-color: yellowgreen;
-    // margin-top: 10px;
+.hoverbutton1chart {
+  visibility: hidden;
+  z-index: 3;
+  top: 1.5em;
+  position: relative;
+  display: flex;
+  flex-direction: row;
 }
-.imgFolder:hover .hoverbutton{ 
-    // display:block;
-    visibility: visible;
-    background-color: yellowgreen;
+.imgFolder:hover .hoverbutton {
+  visibility: visible;
+  background-color: yellowgreen;
 }
-// .rowchart{
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     // background-color:yellowgreen;
-//     width: 20px;
-//     height: 20px;
-//     // margin-top: 64px;
-// }
-.buttoncolorchart{
-    background-color: #94a2f0;
-    // width: 10px;
-    // height: 10px;
-    // padding : 5px;
+.buttoncolorchart {
+  background-color: #94a2f0;
 }
 
-
-
-.rowTopchart{
-    display: flex;
-    // width: 80%;
-    flex-direction: row;
+.rowTopchart {
+  display: flex;
+  flex-direction: row;
 }
-.rowTopchart11{
-    display: flex;
-    // width: 80%;
-    flex-direction: row;
-    margin-left: 10px;
+.rowTopchart11 {
+  display: flex;
+  flex-direction: row;
+  margin-left: 10px;
 }
-.productstyle{
-    color: #94a2f0;
-    font-size: 15px;
-    // font-family: "Montserrat",sans-serif,monospace;   
-
-    
+.productstyle {
+  color: #94a2f0;
+  font-size: 15px;
 }
-.reportstyle{
-    color: #424242;
-    margin-left: 10px;
-    font-size: 15px;
-    // font-family: "Montserrat",sans-serif,monospace;   
-
+.reportstyle {
+  color: #424242;
+  margin-left: 10px;
+  font-size: 15px;
 }
-.rowTopchart1{
-    display: flex;
-    // width: 80%;
-    flex-direction: row;
-    justify-content: space-between;
+.rowTopchart1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.colD{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 10px;
+.colD {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 10px;
 }
-.boxD{
-    width: 50px;
-    height: 50px;
-    background-color: #eceeef;
+.boxD {
+  width: 50px;
+  height: 50px;
+  background-color: #eceeef;
 }
-.rowD{
-    display: flex;
-    flex-direction: row;
-    width: 346px;
-    padding : 5px;
+.rowD {
+  display: flex;
+  flex-direction: row;
+  width: 346px;
+  padding: 5px;
 }
-.RowWiswD{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+.RowWiswD {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-.amountD{
-    display: flex;
-    font-size: 20px;
-    margin-top: 10px;
-    align-items: center;
-    font-weight: 600;
-
+.amountD {
+  display: flex;
+  font-size: 20px;
+  margin-top: 10px;
+  align-items: center;
+  font-weight: 600;
 }
-.amountStyle{
-    font-size: 25px;
-    font-weight: 600;
-    margin-top: 30px;
-    margin-bottom: 10px;
+.amountStyle {
+  font-size: 25px;
+  font-weight: 600;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
-.rowTopchart12{
-    display: flex;
-    // width: 80%;
-    flex-direction: row;
-    // justify-content: space-between;
+.rowTopchart12 {
+  display: flex;
+  flex-direction: row;
 }
-.insidechartbody{
-    width: 680px;
-    // margin-left: 10px;
+.insidechartbody {
+  width: 680px;
 }
-.rowFlex1chart23{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    background-color:white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 20px;
-    
+.rowFlex1chart23 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-left: 20px;
 }
-.circlechart{
-    width:319px;
-    // display: flex;
-    // justify-content: center;
+.circlechart {
+  width: 319px;
 }
-.satification{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+.satification {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-.alignment{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.alignment {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.cardImgsize{
-    width: 60px;
-    height: 60px;
-    border-radius: 2px;
+.cardImgsize {
+  width: 60px;
+  height: 60px;
+  border-radius: 2px;
 }
-.alignment1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.alignment1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.textproperty{
-    // display: flex;
-    text-overflow: clip;
-    width:"540px";
-    overflow: hidden;
-    // background-color: yellow;
+.textproperty {
+  text-overflow: clip;
+  width: "540px";
+  overflow: hidden;
 }
-.gradient{
-    display: flex;
-    justify-content: center;
-    width:335px;
-    height: 150px;
-    background: linear-gradient(45deg, #a890d3, #edbae7)
+.gradient {
+  display: flex;
+  justify-content: center;
+  width: 335px;
+  height: 150px;
+  background: linear-gradient(45deg, #a890d3, #edbae7);
 }
-.widthvalue{
-   width: 1035px ;
+.widthvalue {
+  width: 1035px;
 }
-.profile{
-    width:150px;
-    height:150px;
-    border-radius: 50%;
-    border: 3px solid #fff;
-    box-shadow: 0px 5px 25px 0px rgba(0,0,0,0.2);
-    margin-top: 25%;
-
+.profile {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px solid #fff;
+  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+  margin-top: 25%;
 }
-.facebookiconImg{
-    width: 28px;
-    height: 28px;
-    // color: orangered;
-    // filter: opacity(0.9) drop-shadow(0 0 0 orangered);
-    // -webkit-filter: invert(100%);
-    // background-color: orangered;
+.facebookiconImg {
+  width: 28px;
+  height: 28px;
 }
-.instaiconImg{
-    width: 28px;
-    height: 28px;
-    // color: orangered;
-    // padding: 5px;
-    // filter: invert(100%);
-    // background-color: orangered;
+.instaiconImg {
+  width: 28px;
+  height: 28px;
 }
-.twittericonImg{
-    width: 28px;
-    height: 28px;
-    // color: orangered;
-    // filter: invert(100%);
-    // background-color: orangered;
+.twittericonImg {
+  width: 28px;
+  height: 28px;
 }
-.iconImagerow{
-    // width: 150px;
-    margin-top: 30%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-    
+.iconImagerow {
+  margin-top: 30%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
 }
-.rowTopchart123{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 335px;
+.rowTopchart123 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 335px;
 }
-.centerpara{
-    display: flex;
-    justify-content: center;
-    // flex-direction: column;
-    font-size: 15px;
-    color: #888;
-    margin-bottom: 5px;
+.centerpara {
+  display: flex;
+  justify-content: center;
+  font-size: 15px;
+  color: @lightgrey;
+  margin-bottom: 5px;
 }
-.lastrow{
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-    color:rgb(85, 83, 83);
-
+.lastrow {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  color: rgb(85, 83, 83);
 }
-.columnflex{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+.columnflex {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-.rowImage{
-    display: flex;
-    flex-direction: row;
+.rowImage {
+  display: flex;
+  flex-direction: row;
 }
-.rowImage1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.rowImage1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.rowImage2{
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
+.rowImage2 {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
 }
-.mapSize{
-    height: 400px;
-    width: 650px;
-    margin-top: 10px;
-    border-radius: 3px;
+.mapSize {
+  height: 400px;
+  width: 650px;
+  margin-top: 10px;
+  border-radius: 3px;
 }
-.rowFlex{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    background-color:white;
-    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    // margin-left: 20px;
-    
+.rowFlex {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  background-color: white;
+}
+.chart1 {
+  width: 1009px;
+  margin-top: 70px;
 }
