--- a/src/components/Dashboard/dashboard.less
+++ b/src/components/Dashboard/dashboard.less
@@ -1,318 +1,293 @@
-.topdrawer{
-    display : flex;
-    flex-direction: row;
-    margin-top: 15px;
-    align-items: center;
-    justify-content: space-around;
-}
-.iconColor{
-    color : #888
-}
-.oreo{
-    // font-family: "Montserrat",sans-serif;   
-    color : #888
-}
-.homeIcon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    border: 1px solid #6572b8;
-    border-radius: 30px;
-    padding: 5px;
-    width: 102px;
-    height: 46px;
-}
-.header{
-    display: flex;
-    flex-direction: row;
-    margin-top: 15px;
-    // margin-left: 10px;
-    padding: 8px 12px;
-    position: relative;
-    
-}
-.header1{
-    margin-top: 15px;
-    border: none; 
-}
-.broderPanel{
-    border:1px white solid;
-    outline: none;
-    box-shadow: white;
-    
-}
-.headerMain{
-    font-size: 11px;
-    font-weight: 700;
-    color: #455a64;
-    // font-family: Montserrat, Arial, Tahoma, sans-serif;
-}
-.content{
-    font-size: 11px;
-    font-weight: 700;
-    color: #455a64;
-    // font-family: Montserrat,sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.cartIcon{
-    font-size: 17px;
-    color: #6572b8;
-    margin-left: 15px;
-    margin-right: 10px;
-}
-.ecommerce{
-    font-size: 20px;
+@import "../../less/color.less";
+@import "../../less/const.less";
 
-    color: #6572b8;
-    cursor: pointer;
-    // font-family: lato;
+.topdrawer {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  align-items: center;
+  justify-content: space-around;
 }
-.ecommerce1{
-    font-size: 15px;
-    color: #455a64;
-    font-weight: 400;
-    cursor: pointer;
-    // font-family: lato;
+.iconColor {
+  color: @lightgrey;
 }
-.heading{
-    font-size: 16px;
-    color: #6572b8  ;
-    // font-family: Montserrat, Arial, Tahoma, sans-serif;
+.oreo {
+  color: @lightgrey;
+}
+.homeIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  border: 1px solid #6572b8;
+  border-radius: 30px;
+  padding: 5px;
+  width: 102px;
+  height: 46px;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  padding: 8px 12px;
+  position: relative;
+}
+.header1 {
+  margin-top: 15px;
+  border: none;
+}
+.broderPanel {
+  border: 1px @white solid;
+  outline: none;
+  box-shadow: @white;
+}
+.headerMain {
+  font-size: 11px;
+  font-weight: @fontWeightH1;
+  color: #455a64;
+}
+.content {
+  font-size: 11px;
+  font-weight: @fontWeightH1;
+  color: #455a64;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cartIcon {
+  font-size: 17px;
+  color: #6572b8;
+  margin-left: 15px;
+  margin-right: 10px;
+}
+.ecommerce {
+  font-size: 20px;
 
+  color: #6572b8;
+  cursor: pointer;
 }
-.rowWise{
-    display: flex;
-    // display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
-
+.ecommerce1 {
+  font-size: 15px;
+  color: #455a64;
+  font-weight: @fontWeightH2;
+  cursor: pointer;
 }
-.iconColorAppbar{
-    color :white;
-    font-size: small;
-    size: small;
+.heading {
+  font-size: 16px;
+  color: #6572b8;
 }
-.iconColorAppbar3{
-    color :white;
-    font-size: small;
-    size: small;
-    transition: transform 300ms ease-in-out;
-    // animation: bounce;
-   
-
+.rowWise {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
-@-webkit-keyframes rotation{
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to{
-        -webkit-transform: rotate(359deg);
-    }
+.iconColorAppbar {
+  color: @white;
+  font-size: small;
+  size: small;
 }
-.alignmentrotate{
-    display: flex;
-    align-items: center;
-    margin-left: 25px;
-    -webkit-animation: rotation 2s infinite linear;
+.iconColorAppbar3 {
+  color: @white;
+  font-size: small;
+  size: small;
+  transition: transform 300ms ease-in-out;
 }
-.alignment{
-    display: flex;
-    align-items: center;
-    margin-left: 25px;
-}
-
-.inlineBlock{
-    display: inline-block;
-}
-.alignment1{
-    display: flex;
-    align-items: center;
-    margin-left: 35px;
-}
-.alignment2{
-    display: flex;
-    align-items: center;
-    margin-left: 35px;
-    background-color: white;
-    border: 1px solid white;
-    border-radius: 30px;
-    // width: 250px;
-
-    // width: 100%;
-
-}
-.inputsearch{
-    // width:247px;
-    border: 1px solid white;
-    border-radius: 30px;
-    padding: 12px;
-}
-.search{
-    display: flex;
-    background-color: white;
-    height: 35px;
-    border: 1px solid white;
-    border-radius: 30px;
-    // width: 220px;
-    color: #424242;
-    padding: 5px;
-    // font-family: "Montserrat",sans-serif;
-    // background-color: brown;
-}
-.blackColor{
-    display: flex;
-    align-items: center;
-    color: black;
-    font-weight: 400;
-}
-.alignment3{
-    display: flex;
-    align-items: center;
-    padding: 10px;
-
-
-    // justify-content: flex-end;
-    // background-color: chocolate;
-}
-.rowWise1{
-    display: flex;
-    // display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    // width: 80%;
-
-}
-.rowWise2{
-    display: flex;
-    width: 100%;
-    // display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    // background-color: coral;
-}
-.expansion{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.expansion1{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    // justify-content: space-between;
-}
-.alignmentshow1{
-    display: flex;
-    // align-items: center;
-    // margin-left: 25px;
-}
-.rowshow{
-    display: flex;
-    flex-direction: row;
-}
-// .notification{
-//     // background-color: black;
-//     color : white;
-    
-
-// }
-// .notification .badge{
-//     position: absolute;
-//     top:-10;
-//     right : -10;
-//     padding: 5px 10px;
-//     border-radius: 50%;
-//     background-color: white;
-//     color:white
-// }
-.notify .heartbit{
--webkit-border-radius: 70px;
-/* border-radius: 70px; */
-position: absolute;
-top: -20px;
-right: -16px;
-height: 25px;
-width: 25px;
-z-index: 10;
-border: 4px solid;
-border-color:  #455a64;
-// -webkit-animation: heartbit 1s ease-out linear;
--webkit-animation-iteration-count: infinite;
-animation-iteration-count: infinite;
-animation:  heartbeat .75s ease-out infinite ;
-}
-@keyframes heartbeat
-{
-  0%
-  {
-    transform: scale( .5 );
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
   }
-  10%{
-    transform: scale( .10 );
+  to {
+    -webkit-transform: rotate(359deg);
   }
-  20%
-  {
-    transform: scale( .15 );
+}
+.alignmentrotate {
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
+  -webkit-animation: rotation 2s infinite linear;
+}
+.alignment {
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
+}
+
+.inlineBlock {
+  display: inline-block;
+}
+.alignment1 {
+  display: flex;
+  align-items: center;
+  margin-left: 35px;
+}
+.alignment2 {
+  display: flex;
+  align-items: center;
+  margin-left: 35px;
+  background-color: @white;
+  border: 1px solid @white;
+  border-radius: 30px;
+}
+.inputsearch {
+  border: 1px solid @white;
+  border-radius: 30px;
+  padding: 12px;
+}
+.search {
+  display: flex;
+  background-color: @white;
+  height: 35px;
+  border: 1px solid @white;
+  border-radius: 30px;
+  color: #424242;
+  padding: 5px;
+}
+.blackColor {
+  display: flex;
+  align-items: center;
+  color: black;
+  font-weight: @fontWeightH2;
+}
+.alignment3 {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.rowWise1 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.rowWise2 {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.expansion {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.expansion1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.alignmentshow1 {
+  display: flex;
+}
+.rowshow {
+  display: flex;
+  flex-direction: row;
+}
+.notify .heartbit {
+  -webkit-border-radius: 70px;
+  position: absolute;
+  top: -20px;
+  right: -16px;
+  height: 25px;
+  width: 25px;
+  z-index: 10;
+  border: 4px solid;
+  border-color: #455a64;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  animation: heartbeat 0.75s ease-out infinite;
+}
+@keyframes heartbeat {
+  0% {
+    transform: scale(0.5);
   }
-  30%{
-    transform: scale( .20 );
+  10% {
+    transform: scale(0.1);
   }
-  40%
-  {
-    transform: scale( .30 );
+  20% {
+    transform: scale(0.15);
   }
-  50%{
-    transform: scale( .40 );
+  30% {
+    transform: scale(0.2);
   }
-  60%
-  {
-    transform: scale( .50 );
+  40% {
+    transform: scale(0.3);
   }
-  70%{
-    transform: scale( .60 );
+  50% {
+    transform: scale(0.4);
   }
-  80%
-  {
-    transform: scale( .70 );
+  60% {
+    transform: scale(0.5);
   }
-  90%{
-    transform: scale( .75 );
+  70% {
+    transform: scale(0.6);
   }
-  100%
-  {
-    transform: scale( .80 );
+  80% {
+    transform: scale(0.7);
+  }
+  90% {
+    transform: scale(0.75);
+  }
+  100% {
+    transform: scale(0.8);
   }
 }
 .notify {
-    position: absolute;
-    top: 30px;
-    // right: 11px;
-    // left:45px;
-    margin-left: 16px;
+  position: absolute;
+  top: 30px;
+  margin-left: 16px;
 }
-.notify .point{
-    border-radius: 30px;
-    width: 6px;
-    height: 6px;
-    background-color: #3d4c5a;
-    position: absolute;
-    right: -6px;
-    top: -10px;
-
+.notify .point {
+  border-radius: 30px;
+  width: 6px;
+  height: 6px;
+  background-color: #3d4c5a;
+  position: absolute;
+  right: -6px;
+  top: -10px;
 }
 
-.alignmentrotate{
-    display: flex;
-    align-items: center;
-    margin-left: 25px;
+.alignmentrotate {
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
 }
-.notificationrotate{
-    display: flex;
-    flex-direction: row;
+.notificationrotate {
+  display: flex;
+  flex-direction: row;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .example {
+    background: red;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .example {
+    background: green;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .example {
+    background: blue;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .example {
+    background: orange;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .example {
+    background: pink;
+  }
 }
