--- a/src/components/DashboardHome/dashboardHome.less
+++ b/src/components/DashboardHome/dashboardHome.less
@@ -1,76 +1,64 @@
-.row{
-    margin-top: 64px;
-    display:flex;
-    flex-direction: row;
-    // align-items: center;
-    background-color: #94a2f0;
-    height: 150px;
-    padding: 20px;
-    justify-content: space-between;
-    width: 100%;
-}
-.productSize{
-    height: 67px;
-    display: flex;
-    align-items: flex-start;
-}
-.productColor{
-    // font-family:lato;
-    font-size: 23px;
-    color : white
-}
-.productWelcome{
-    // font-family: lato,monospace;
-    font-size: 14px;
-    color : white
+@import "../../less/color.less";
 
+.row {
+  margin-top: 64px;
+  display: flex;
+  flex-direction: row;
+  background-color: #94a2f0;
+  height: 150px;
+  padding: 20px;
+  justify-content: space-between;
+  width: 100%;
 }
-.productName{
-    width: 629px;
+.productSize {
+  height: 67px;
+  display: flex;
+  align-items: flex-start;
 }
-.path{
-    width: 300px;
-    border-radius: 50px;
-    background-color: #b8c0e2;
-    margin-left: 150px;
+.productColor {
+  font-size: 23px;
+  color: white;
 }
-.homeIcon1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    // border: 1px solid #aab3e7;
-    border-radius: 30px;
-    padding: 5px;
-    // width: 350px;
-    height: 46px;
-    margin-left: 12px;
+.productWelcome {
+  font-size: 14px;
+  color: white;
 }
-.oreo1{
-    // font-family: "Montserrat",sans-serif;   
-    color : white;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+.productName {
+  width: 629px;
 }
-.iconHomeColor{
-    color:white;
-    margin-right: 5px ;
+.path {
+  width: 300px;
+  border-radius: 50px;
+  background-color: #b8c0e2;
+  margin-left: 150px;
 }
-.wordStyle{
-    color: #888;
-    margin-left: 7px;
-    font-size: 17px;
-    // font-family: "Montserrat",sans-serif,monospace;   
-
-
+.homeIcon1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  border-radius: 30px;
+  padding: 5px;
+  height: 46px;
+  margin-left: 12px;
 }
-.wordStyle1{
-    margin-left: 5px;
-    font-size: 17px;
-    margin-left: 7px;
-    // font-family: "Montserrat",sans-serif,monospace;   
-
-
-    // color: #888;
+.oreo1 {
+  color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.iconHomeColor {
+  color: white;
+  margin-right: 5px;
+}
+.wordStyle {
+  color: @lightgrey;
+  margin-left: 7px;
+  font-size: 17px;
+}
+.wordStyle1 {
+  margin-left: 5px;
+  font-size: 17px;
+  margin-left: 7px;
 }
