--- a/src/components/HeaderPage/headerPage.less
+++ b/src/components/HeaderPage/headerPage.less
@@ -1,351 +1,300 @@
-.topdrawerheader{
-    display : flex;
-    flex-direction: row;
-    margin-top: 15px;
-    align-items: center;
-    justify-content: space-around;
-}
-.iconColorheader{
-    color : #888
-}
-.oreoheader{
-    // font-family: "Montserrat",sans-serif;   
-    color : #888
-}
-.homeIconheader{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    border: 1px solid #6572b8;
-    border-radius: 30px;
-    padding: 5px;
-    width: 102px;
-    height: 46px;
-}
-.headerheader{
-    display: flex;
-    flex-direction: row;
-    margin-top: 15px;
-    // margin-left: 10px;
-    padding: 8px 12px;
-    position: relative;
-    
-}
-.header1header{
-    margin-top: 15px;
-    border: none; 
-}
-.broderPanel{
-    border:1px white solid;
-    outline: none;
-    box-shadow: white;
-    
-}
-.headerMainheader{
-    font-size: 14px;
-    font-weight: 700;
-    color: #455a64;
-    // font-family: Montserrat, Arial, Tahoma, sans-serif;
-}
-.content{
-    font-size: 11px;
-    font-weight: 700;
-    color: #455a64;
-    // font-family: Montserrat,sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.cartIconheader{
-    font-size: 17px;
-    color: #6572b8;
-    margin-left: 15px;
-    margin-right: 10px;
-}
-.ecommerceheader{
-    font-size: 18px;
+@import "../../less/color.less";
+@import "../../less/const.less";
 
-    color: #6572b8;
-    cursor: pointer;
-    // font-family: lato;
+.topdrawerheader {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  align-items: center;
+  justify-content: space-around;
 }
-.ecommerce1header{
-    font-size: 15px;
-    color: #455a64;
-    font-weight: 400;
-    cursor: pointer;
-    // font-family: lato;
+.iconColorheader {
+  color: @lightgrey;
 }
-.heading{
-    font-size: 16px;
-    color: #6572b8  ;
-    // font-family: Montserrat, Arial, Tahoma, sans-serif;
+.oreoheader {
+  color: @lightgrey;
+}
+.homeIconheader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  border: 1px solid #6572b8;
+  border-radius: 30px;
+  padding: 5px;
+  width: 102px;
+  height: 46px;
+}
+.headerheader {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  padding: 8px 12px;
+  position: relative;
+}
+.header1header {
+  margin-top: 15px;
+  border: none;
+}
+.broderPanel {
+  border: 1px white solid;
+  outline: none;
+  box-shadow: white;
+}
+.headerMainheader {
+  font-size: 14px;
+  font-weight: @fontWeightH1;
+  color: #455a64;
+}
+.content {
+  font-size: 11px;
+  font-weight: @fontWeightH1;
+  color: #455a64;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cartIconheader {
+  font-size: 17px;
+  color: #6572b8;
+  margin-left: 15px;
+  margin-right: 10px;
+}
+.ecommerceheader {
+  font-size: 18px;
 
+  color: #6572b8;
+  cursor: pointer;
 }
-.rowWise{
-    display: flex;
-    // display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
-
+.ecommerce1header {
+  font-size: 15px;
+  color: #455a64;
+  font-weight: 400;
+  cursor: pointer;
 }
-.iconColorAppbar{
-    color :white;
-    font-size: small;
-    size: small;
+.heading {
+  font-size: 16px;
+  color: #6572b8;
 }
-.iconColorAppbar3{
-    color :white;
-    font-size: small;
-    size: small;
-    transition: transform 300ms ease-in-out;
-    // animation: bounce;
-   
-
+.rowWise {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
-@-webkit-keyframes rotation{
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to{
-        -webkit-transform: rotate(359deg);
-    }
+.iconColorAppbar {
+  color: white;
+  font-size: small;
+  size: small;
 }
-.alignmentrotate{
-    display: flex;
-    align-items: center;
-    margin-left: 25px;
-    -webkit-animation: rotation 2s infinite linear;
+.iconColorAppbar3 {
+  color: white;
+  font-size: small;
+  size: small;
+  transition: transform 300ms ease-in-out;
 }
-.alignment{
-    display: flex;
-    align-items: center;
-    margin-left: 25px;
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+  }
+}
+.alignmentrotate {
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
+  -webkit-animation: rotation 2s infinite linear;
+}
+.alignment {
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
 }
 
-.inlineBlock{
-    display: inline-block;
+.inlineBlock {
+  display: inline-block;
 }
-.alignment1{
-    display: flex;
-    align-items: center;
-    margin-left: 35px;
+.alignment1 {
+  display: flex;
+  align-items: center;
+  margin-left: 35px;
 }
-.alignment2{
-    display: flex;
-    align-items: center;
-    margin-left: 35px;
-    background-color: white;
-    border: 1px solid white;
-    border-radius: 30px;
-    // width: 250px;
-
-    // width: 100%;
-
+.alignment2 {
+  display: flex;
+  align-items: center;
+  margin-left: 35px;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 30px;
 }
-.inputsearch{
-    // width:247px;
-    border: 1px solid white;
-    border-radius: 30px;
-    padding: 12px;
+.inputsearch {
+  border: 1px solid white;
+  border-radius: 30px;
+  padding: 12px;
 }
-.search{
-    display: flex;
-    background-color: white;
-    height: 35px;
-    border: 1px solid white;
-    border-radius: 30px;
-    // width: 220px;
-    color: #424242;
-    padding: 5px;
-    // font-family: "Montserrat",sans-serif;
-    // background-color: brown;
+.search {
+  display: flex;
+  background-color: white;
+  height: 35px;
+  border: 1px solid white;
+  border-radius: 30px;
+  color: #424242;
+  padding: 5px;
 }
-.blackColor{
-    display: flex;
-    align-items: center;
-    color: black;
-    font-weight: 400;
+.blackColor {
+  display: flex;
+  align-items: center;
+  color: black;
+  font-weight: 400;
 }
-.alignment3{
-    display: flex;
-    align-items: center;
-    padding: 10px;
-
-
-    // justify-content: flex-end;
-    // background-color: chocolate;
+.alignment3 {
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
-.rowWise1{
-    display: flex;
-    // display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    // width: 80%;
-
+.rowWise1 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
-.rowWise2{
-    display: flex;
-    width: 100%;
-    // display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    // background-color: coral;
+.rowWise2 {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-.expansionheader{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.expansionheader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
-.expansion1{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 10px;
-    // justify-content: space-between;
+.expansion1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10px;
 }
-.alignmentshow1{
-    display: flex;
-    // align-items: center;
-    // margin-left: 25px;
+.alignmentshow1 {
+  display: flex;
 }
-.rowshow{
-    display: flex;
-    flex-direction: row;
+.rowshow {
+  display: flex;
+  flex-direction: row;
 }
-.rowshowalign{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+.rowshowalign {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.profileimg{
-    display: flex;
-    justify-content: center;
-    // width: 80px;
-    margin-top: 20px;
+.profileimg {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
-.profileimgsize{
-    width: 80px;
-    border-radius: 50%;
-    border: 3px solid #fff;
-    box-shadow: 0px 5px 25px 0px rgba(0,0,0,0.2);
+.profileimgsize {
+  width: 80px;
+  border-radius: 50%;
+  border: 3px solid #fff;
+  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+}
+.profilename {
+  font-size: 20px;
+}
+.profilesize {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+}
+.profilesize1 {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+}
+.profilesize1column {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  flex-direction: column;
+}
+.para {
+  display: flex;
+  font-size: 14px;
 
+  font-weight: 400;
+  color: @lightgrey;
+  justify-content: center;
+  margin-left: 20px;
+  margin-top: 10px;
 }
-.profilename{
-    font-size: 20px;
-}
-.profilesize{
-    display : flex;
-    justify-content: center;
-    // font-family: "Montserrat",sans-serif;
-    font-size: 18px;
-}
-.profilesize1{
-    display : flex;
-    justify-content: center;
-    // font-family: "Montserrat",sans-serif;
-    font-size: 14px;
-}
-.profilesize1column{
-    display : flex;
-    justify-content: center;
-    // font-family: "Montserrat",sans-serif;
-    font-size: 14px;
-    flex-direction: column;
-}
-.para{
-    display: flex;
-    font-size: 14px;
-
-    font-weight: 400;
-    color : #888;
-    justify-content: center;
-    margin-left: 20px;
-    margin-top: 10px;
- 
-
-
-}
-// .contentcneter{
-//     display: flex;
-//     justify-content: center;
-//     width: 100%;
-//     // flex-direction: column;
-// }
-
 
 .stretchRight {
-    animation: stretchRight;
-    -webkit-animation-name: stretchRight;
-    animation-duration: 1.5s;
-    -webkit-animation-duration: 1.5s;
-    animation-timing-function: ease-out;
-    -webkit-animation-timing-function: ease-out;
-    // transform-origin: 0% 0%;
-    // -ms-transform-origin: 0% 0%;
-    -webkit-transform-origin: 0% 0%;
+  animation: stretchRight;
+  -webkit-animation-name: stretchRight;
+  animation-duration: 1.5s;
+  -webkit-animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  -webkit-animation-timing-function: ease-out;
+  -webkit-transform-origin: 0% 0%;
 }
-@keyframes stretchRight{
-    0% {
-        transform: scaleX(0.3);
-    }
-    40% {
-        transform: scaleX(1.02);
-    }
-    60% {
-        transform: scaleX(0.98);
-    }
-    80% {
-        transform: scaleX(1.01);
-    }
-    100% {
-        transform: scaleX(0.98);
-    }
-    80% {
-        transform: scaleX(1.01);
-    }
-    100% {
-        transform: scaleX(1);
-    }
+@keyframes stretchRight {
+  0% {
+    transform: scaleX(0.3);
+  }
+  40% {
+    transform: scaleX(1.02);
+  }
+  60% {
+    transform: scaleX(0.98);
+  }
+  80% {
+    transform: scaleX(1.01);
+  }
+  100% {
+    transform: scaleX(0.98);
+  }
+  80% {
+    transform: scaleX(1.01);
+  }
+  100% {
+    transform: scaleX(1);
+  }
 }
 
 .stretchLeft {
-    animation: stretchLeft;
-    -webkit-animation-name: stretchLeft;
-    animation-duration: 1.5s;
-    -webkit-animation-duration: 1.5s;
-    animation-timing-function: ease-out;
-    -webkit-animation-timing-function: ease-out;
-    // transform-origin: 100% 0%;
-    // -ms-transform-origin: 100% 0%;
-    -webkit-transform-origin: 100% 0%;
+  animation: stretchLeft;
+  -webkit-animation-name: stretchLeft;
+  animation-duration: 1.5s;
+  -webkit-animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  -webkit-animation-timing-function: ease-out;
+  -webkit-transform-origin: 100% 0%;
 }
-@keyframes stretchLeft{
-    0% {
-        transform: scaleX(0.3);
-    }
-    40% {
-        transform: scaleX(1.02);
-    }
-    60% {
-        transform: scaleX(0.98);
-    }
-    80% {
-        transform: scaleX(1.01);
-    }
-    100% {
-        transform: scaleX(0.98);
-    }
-    80% {
-        transform: scaleX(1.01);
-    }
-    100% {
-        transform: scaleX(1);
-    }
+@keyframes stretchLeft {
+  0% {
+    transform: scaleX(0.3);
+  }
+  40% {
+    transform: scaleX(1.02);
+  }
+  60% {
+    transform: scaleX(0.98);
+  }
+  80% {
+    transform: scaleX(1.01);
+  }
+  100% {
+    transform: scaleX(0.98);
+  }
+  80% {
+    transform: scaleX(1.01);
+  }
+  100% {
+    transform: scaleX(1);
+  }
 }
