--- a/src/components/ProductList/productList.less
+++ b/src/components/ProductList/productList.less
@@ -1,273 +1,234 @@
-.rowlist{
-    margin-top: 64px;
-    display:flex;
-    flex-direction: row;
-    // align-items: center;
-    background-color: #94a2f0;
-    height: 150px;
-    padding: 20px;
-    justify-content: space-between;
-    width: 100%;
-    
-}
-.productSizelist{
-    height: 67px;
-    display: flex;
-    align-items: flex-start;
-    width: 100%;
-}
-.productColorlist{
-    // font-family:lato;
-    font-size: 23px;
-    color : white
-}
-.productWelcomelist{
-    // font-family: lato,monospace;
-    font-size: 14px;
-    color : white
+@import "../../less/color.less";
+@import "../../less/const.less";
 
+.rowlist {
+  margin-top: 64px;
+  display: flex;
+  flex-direction: row;
+  background-color: @blue;
+  height: 150px;
+  padding: 20px;
+  justify-content: space-between;
+  width: 100%;
 }
-.productNamelist{
-    min-width: 770px;
-    max-width: 100%;
+.productSizelist {
+  height: 67px;
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
 }
-.pathlist{
-    width: 300px;
-    border-radius: 50px;
-    background-color: #b8c0e2;
-    // margin-left: 150px;
+.productColorlist {
+  font-size: 23px;
+  color: @white;
 }
-.homeIcon1list{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    // border: 1px solid #aab3e7;
-    border-radius: 30px;
-    padding: 5px;
-    // width: 350px;
-    height: 46px;
-    margin-left: 12px;
+.productWelcomelist {
+  font-size: 14px;
+  color: @white;
 }
-.oreo1{
-    // font-family: "Montserrat",sans-serif;   
-    color : white;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+.productNamelist {
+  min-width: 770px;
+  max-width: 100%;
 }
-.iconHomeColorlist{
-    color:white;
-    margin-right: 5px ;
+.pathlist {
+  width: 300px;
+  border-radius: 50px;
+  background-color: #b8c0e2;
 }
-.wordStyle{
-    color: #888;
-    margin-left: 7px;
-    font-size: 17px;
-    // font-family: "Montserrat",sans-serif,monospace;   
+.homeIcon1list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  border-radius: 30px;
+  padding: 5px;
+  height: 46px;
+  margin-left: 12px;
+}
+.oreo1 {
+  color: @white;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.iconHomeColorlist {
+  color: @white;
+  margin-right: 5px;
+}
+.wordStyle {
+  color: @lightgrey;
+  margin-left: 7px;
+  font-size: 17px;
+}
+.wordStyle1 {
+  margin-left: 5px;
+  font-size: 17px;
+  margin-left: 7px;
+  font-family: "Montserrat", sans-serif, monospace;
+}
+.containerFluidlist {
+  width: 82%;
+  display: flex;
+  // flex-wrap:wrap ;
+  // padding: 15px;
+  z-index: 3;
+  top: 11em;
+  position: absolute;
+  justify-content: center;
+  margin-bottom: 20px;
+  // background-color: orange;
+  // flex-direction: column;
+}
+.rowFlexlist {
+  display: flex;
+  // flex-wrap: wrap;
+  flex-direction: column;
+  width: 90%;
+  background-color: @white;
+  border-radius: 3px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.collist {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+.firstcontainerlist {
+  display: flex;
+  // width : 100%;
+  // background-color: yellow;
+}
+.productItemlist {
+  background-color: @white;
+  width: 80%;
+  box-shadow: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  justify-content: center;
+}
+.bobylist {
+  color: #424242;
+  font-weight: 400;
+  // padding: 20px;
+  font-size: 14px;
+  width: 840px;
+}
+.rowWiselist {
+  display: flex;
+  flex-direction: row;
+  height: 77px;
+  justify-content: space-evenly;
+}
+.imagesize {
+  width: 48px;
+  height: 48px;
+}
+.Image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 72px;
+}
+.ProductlistName {
+  display: flex;
+  align-items: center;
+}
+.details {
+  width: 300px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.ProductlistName {
+  width: 160px;
+}
+.amount {
+  width: 85px;
+  display: flex;
+  align-items: center;
+}
+.stock {
+  width: 105px;
+  display: flex;
+  align-items: center;
+}
+.Action {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 110px;
+}
+.imagButton {
+  width: 47px;
+  height: 38px;
+  // background-color: #888;
+  justify-content: center;
 
-
+  align-items: center;
+  display: flex;
 }
-.wordStyle1{
-    margin-left: 5px;
-    font-size: 17px;
-    margin-left: 7px;
-    font-family: "Montserrat",sans-serif,monospace;   
-
-
-    // color: #888;
-}
-.containerFluidlist{
-    width: 82%;
-    display: flex;
-    // flex-wrap:wrap ;
-    // padding: 15px;
-    z-index: 3;
-    top:11em;
-    position: absolute;
-    justify-content: center;
-    margin-bottom: 20px;
-    // background-color: orange;
-    // flex-direction: column;
-
-}
-.rowFlexlist{
-    display: flex;
-    // flex-wrap: wrap;
-    flex-direction: column;
-    width: 90%;
-    background-color: white;
-    border-radius: 3px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-
-}
-.collist{
-    // max-width: 25%;
-    // position: relative;
-    display : flex;
-    // flex-direction: row;
-    // flex-wrap: wrap;
-    // width: 100%;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    // background-color: red;
-    
-}
-.firstcontainerlist{
-    display: flex;
-    // width : 100%;
-    // background-color: yellow;
-}
-.productItemlist{
-    background-color: white;
-    width: 80%;
-    box-shadow: none;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    padding:10px;
-    justify-content: center;
-    
-}
-.bobylist{
-    color: #424242;
-    font-weight: 400;
-    // padding: 20px;
-    font-size: 14px;
-    width: 840px;
-}
-.rowWiselist{
-    display: flex;
-    flex-direction: row;
-    height: 77px;
-    justify-content: space-evenly;
-}
-.imagesize{
-    width:48px;
-    height: 48px;
-}
-.Image{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 72px;
-}
-.ProductlistName{
-    display: flex;
-    align-items: center;
-    
-}
-.details{
-    width: 300px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.ProductlistName{
-    width: 160px;
-}
-.amount{
-    width: 85px;
-    display: flex;
-    align-items: center;
-}
-.stock{
-    width: 105px;
-    display: flex;
-    align-items: center;
-}
-.Action{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width:110px
-}
-.imagButton{
-    width:47px;
-    height: 38px;
-    // background-color: #888;
-    justify-content: center;
-
-    align-items: center;
-    display: flex;
-
-}
-.imagButton1{
-    width:40px;
-    height: 38px;
-    // background-color: #888;
-    justify-content: center;
-    padding-left: 5px;
-    align-items: center;
-    display: flex;
-
+.imagButton1 {
+  width: 40px;
+  height: 38px;
+  // background-color: #888;
+  justify-content: center;
+  padding-left: 5px;
+  align-items: center;
+  display: flex;
 }
 
-.rowlistbutton{
-    display: flex;
-    flex-direction: row;
-    // width: 130px;
-    // align-items: center;
-    // background-color: white;
-
-    justify-content: space-between;
+.rowlistbutton {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-
-.Imagehead{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 72px;
-    font-weight: 600;
-    font-size: 14px;
-    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+.Imagehead {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 72px;
+  font-weight: @fontWeightImg;
+  font-size: 14px;
 }
-.ProductlistNamehead{
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-    font-size: 14px;
-    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
-    
+.ProductlistNamehead {
+  display: flex;
+  align-items: center;
+  font-weight: @fontWeightImg;
+  font-size: 14px;
 }
-.detailshead{
-    width: 300px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    font-weight: 600;
-    font-size: 14px;
-    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+.detailshead {
+  width: 300px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  font-weight: @fontWeightImg;
+  font-size: 14px;
 }
-.ProductlistNamehead{
-    width: 160px;
-    font-weight: 600;
-    font-size: 14px;
-    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+.ProductlistNamehead {
+  width: 160px;
+  font-weight: @fontWeightImg;
+  font-size: 14px;
 }
-.amounthead{
-    width: 85px;
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-    font-size: 14px;
-    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+.amounthead {
+  width: 85px;
+  display: flex;
+  align-items: center;
+  font-weight: @fontWeightImg;
+  font-size: 14px;
 }
-.stockhead{
-    width: 105px;
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-    font-size: 14px;
-    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+.stockhead {
+  width: 105px;
+  display: flex;
+  align-items: center;
+  font-weight: @fontWeightImg;
+  font-size: 14px;
 }
-.Actionhead{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width:110px;
-    font-weight: 600;
-    font-size: 14px;
-    // font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+.Actionhead {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 110px;
+  font-weight: @fontWeightImg;
+  font-size: 14px;
 }
